Sun Jan 23 22:04:43 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/scripts/Makefile.am:
	* tests/scripts/noteplaytest.scm: New script that allows testing how
	an instrument (currently: only wave instruments such as gus patches
	supported) sounds when played on a given midi note.

Fri Jan 21 00:33:42 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/dialogs/radgets-beast.xml: added action factories to event
	and piano roll popup menus to create menu items for selection actions.

	* beast-gtk/bstpartdialog.[hc]: change cut/copy/clear sensitivity according
	to selection changes. publish piano roll and event roll selection actions.
	
	* beast-gtk/bsteventrollctrl.[hc]: implemented selection actions.

	* beast-gtk/bsteventroll.c: fixed unnecessary redraws. keep max_ticks
	field up to date. update controllers upon part changes. 

	* beast-gtk/bstpianorollctrl.[hc]: implemented selection actions.

	* beast-gtk/bstpianoroll.c: update controllers upon part changes.

	* beast-gtk/gxk/gxkaction.[hc]: added 64bit stamp to GxkActionCheck() 
	to cache check function results across multiple consequtive invocations
	of GxkActionCheck() functions. exported gxk_action_inc_cache_stamp() to
	allow user code to still call check functions themselves.

	* beast-gtk/bstapp.c: adapted to action_stamp changes.

	* beast-gtk/bstdefs.h: renamed BstCommonRollTool, adapted users.

	* beast-gtk/bstutils.h: added placholder stock icons for select actions.

Thu Jan 20 17:16:26 2005  Tim Janik  <timj@gtk.org>

	* tools/bwtwave.cc (store): use sfi_wstore_putf() to store floats.

Thu Jan 20 05:21:23 2005  Tim Janik  <timj@gtk.org>

	* tools/bwtwave.cc (store): properly pass on write errors.

Thu Jan 20 04:03:00 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: reworded menu entries.

	* beast-gtk/gxk/gxknotebook.c:
	* beast-gtk/gxk/gxkassortment.[hc]: added selection blocking ability.
	properly update selection of newly created menus and notebooks.
